--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@prisma/client": "^2.17.0",
     "apollo-server": "^2.21.0",
+    "dotenv": "^8.2.0",
     "graphql": "^15.5.0",
     "graphql-iso-date": "^3.6.1"
   },
