--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
   "name": "nfl-pickem",
   "version": "0.1.0",
+  "description": "NFL Pickem League. React, GraphQL, Next and Apollo",
   "private": true,
+  "license": "ISC",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.11",
+    "graphql": "^15.5.0",
     "next": "10.0.7",
+    "next-with-apollo": "^5.1.1",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "typescript": "^4.2.2"
   }
 }
