--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.11",
+    "@primer/components": "^23.2.1",
     "graphql": "^15.5.0",
     "next": "10.0.7",
     "next-with-apollo": "^5.1.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
