--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "private": true,
   "license": "ISC",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next -p 7777",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "@apollo/client": "^3.3.11",
-    "@primer/components": "^23.2.1",
+    "@apollo/react-ssr": "^4.0.0",
+    "@babel/core": "^7.13.15",
+    "apollo-link-error": "^1.1.13",
     "graphql": "^15.5.0",
     "next": "10.0.7",
     "next-with-apollo": "^5.1.1",
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "babel-plugin-styled-components": "^1.12.0",
     "typescript": "^4.2.2"
   }
 }
