--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-with-apollo": "^5.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-feather": "^2.0.9",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
