--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@apollo/client": "^3.3.11",
     "@apollo/react-ssr": "^4.0.0",
     "@babel/core": "^7.13.15",
+    "@reach/listbox": "^0.15.0",
+    "@reach/visually-hidden": "^0.15.0",
     "apollo-link-error": "^1.1.13",
     "graphql": "^15.5.0",
     "next": "10.0.7",
