--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.13.15",
     "@reach/listbox": "^0.15.0",
     "@reach/visually-hidden": "^0.15.0",
+    "@types/react-modal": "^3.12.0",
     "apollo-link-error": "^1.1.13",
     "graphql": "^15.5.0",
     "next": "10.0.7",
@@ -22,6 +23,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
+    "react-modal": "^3.14.3",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
