--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@apollo/client": "^3.3.11",
     "@apollo/react-ssr": "^4.0.0",
     "@babel/core": "^7.13.15",
+    "@reach/dialog": "^0.15.0",
     "@reach/listbox": "^0.15.0",
     "@reach/visually-hidden": "^0.15.0",
-    "@types/react-modal": "^3.12.0",
     "apollo-link-error": "^1.1.13",
     "graphql": "^15.5.0",
     "next": "10.0.7",
@@ -23,7 +23,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
-    "react-modal": "^3.14.3",
+    "react-hook-form": "^7.9.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
