--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@reach/listbox": "^0.15.0",
     "@reach/visually-hidden": "^0.15.0",
     "apollo-link-error": "^1.1.13",
+    "deepmerge": "^4.2.2",
     "graphql": "^15.5.0",
+    "lodash": "^4.17.21",
     "next": "10.0.7",
     "next-with-apollo": "^5.1.1",
     "react": "^17.0.1",
