--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reach/visually-hidden": "^0.15.0",
     "apollo-link-error": "^1.1.13",
     "deepmerge": "^4.2.2",
+    "downshift": "^6.1.3",
     "graphql": "^15.5.0",
     "lodash": "^4.17.21",
     "next": "10.0.7",
