--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
     "react-hook-form": "^7.9.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
