--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "next -p 7777",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@apollo/client": "^3.3.11",
@@ -31,9 +32,13 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@types/jest": "^26.0.24",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "babel-plugin-styled-components": "^1.12.0",
+    "jest": "^27.0.6",
     "typescript": "^4.2.2"
   }
 }
