--- a/package.json
+++ b/package.json
@@ -37,8 +37,14 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
     "babel-plugin-styled-components": "^1.12.0",
+    "eslint": "^7.31.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.24.0",
     "jest": "^27.0.6",
+    "prettier": "2.3.2",
     "typescript": "^4.2.2"
   }
 }
