--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "jest": "^27.0.6",
     "prettier": "2.3.2",
