--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "babel-plugin-styled-components": "^1.12.0",
