--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "scripts": {
     "dev": "next -p 7777",
     "build": "next build",
+    "prestart": "npm run codegen",
     "start": "next start -p $PORT",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@apollo/client": "^3.3.11",
@@ -20,7 +22,7 @@
     "apollo-link-error": "^1.1.13",
     "deepmerge": "^4.2.2",
     "downshift": "^6.1.3",
-    "graphql": "^15.5.0",
+    "graphql": "^15.7.2",
     "lodash": "^4.17.21",
     "next": "10.0.7",
     "next-with-apollo": "^5.1.1",
@@ -32,6 +34,12 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.2.2",
+    "@graphql-codegen/introspection": "2.1.0",
+    "@graphql-codegen/near-operation-file-preset": "^2.2.0",
+    "@graphql-codegen/typescript": "2.3.0",
+    "@graphql-codegen/typescript-operations": "^2.2.0",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/jest": "^26.0.24",
