--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,12 @@
 {
   "presets": ["next/babel"],
-  "plugins": [["styled-components", {
-    "ssr": true,
-    "displayName": true
-  }]]
+  "plugins": [
+    [
+      "styled-components",
+      {
+        "ssr": true,
+        "displayName": true
+      }
+    ]
+  ]
 }
