Revert "Merge pull request #10 from mhosanna/ts-strictness"
This reverts commit e49312ac342d946415609a9f57770306b49a2d12, reversing
changes made to 7a1fe2015bc9a995472f5748545ceeaba68db661.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": false,
     "skipLibCheck": true,
-    "strict": false,
-    "noImplicitAny": false,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
