--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "next -p 7777",
     "build": "next build",
     "start": "next start -p $PORT",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "ci:test": "jest"
   },
   "dependencies": {
     "@apollo/client": "^3.3.11",
