--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,18 +14,12 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
+    - name: Use Node.js
+      uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        node-version: '14.x'
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm test
+    - run: npm ci:test
