--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,4 +22,4 @@ jobs:
         node-version: '14.x'
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm ci:test
+    - run: npm run ci:test
