--- a/package.json
+++ b/package.json
@@ -49,5 +49,6 @@
     "jest": "^27.0.6",
     "prettier": "2.3.2",
     "typescript": "^4.2.2"
-  }
+  },
+  "cacheDirectories": ["node_modules/", ".next/cache"]
 }
