--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "apollo-link-error": "^1.1.13",
     "deepmerge": "^4.2.2",
     "downshift": "^6.1.3",
-    "graphql": "^15.5.0",
+    "graphql": "^15.7.2",
     "lodash": "^4.17.21",
     "next": "10.0.7",
     "next-with-apollo": "^5.1.1",
@@ -42,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "babel-plugin-styled-components": "^1.12.0",
+    "casual": "^1.6.2",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
